[package]
name = "quartzcorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
objr = "1"
metalr = {git = "https://github.com/drewcrawford/metalr"}
coregraphicsr = {git = "https://github.com/drewcrawford/coregraphicsr"}